# writing_saloon

./: .gitignore  CLAUDE.md  Dockerfile  README.md  Summary.md  project_structure.md  pyproject.toml  requirements.txt  run.sh  run_web.py  test.sh
agent_saloon/: main.py
agent_saloon/agents/: base.py  camille.py  factory.py  gustave.py  zero.py
agent_saloon/book/: book.py  exporter.py  manager.py  section.py
agent_saloon/collaboration/: consensus.py  coordinator.py  handoff.py
agent_saloon/config/: settings.py
agent_saloon/generators/: base_generator.py  section.py  title.py  toc.py
agent_saloon/prompts/: __init__.py  section_prompts.py  title_prompts.py  toc_prompts.py
agent_saloon/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
agent_saloon/utils/: logger.py
agent_saloon/web/: __init__.py  app.py
agent_saloon/web/templates/: base.html  continue_book.html  create_book.html  dashboard.html  export_book.html  index.html  task_status.html  view_book.html
examples/: advanced_book.py  simple_book.py
