[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_saloon"
version = "0.1.0"
description = "Collaborative AI writing system using multiple providers and agent types"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
keywords = ["ai", "writing", "agents", "openai", "anthropic", "claude", "collaborative"]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "requests>=2.25.0",
    "python-dotenv>=0.15.0",
    # Web UI dependencies
    "flask>=2.3.0",
    "jinja2>=3.1.2",
    "werkzeug>=2.3.7",
    "itsdangerous>=2.1.2",
    "gunicorn>=21.2.0"
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/yourusername/agent_saloon"
"Bug Tracker" = "https://github.com/yourusername/agent_saloon/issues"

[project.scripts]
agent-saloon = "agent_saloon.main:main"
agent-saloon-web = "run_web:main"

[tool.setuptools]
packages = ["agent_saloon"]

[tool.setuptools.package-data]
"agent_saloon.web" = ["templates/*.html", "static/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=agent_saloon"
testpaths = ["tests"]

